...
    <string name="list_popup_window_use_epicenter">Custom Epicenter</string>

    <string name="popup_menu_activity">AppCompat/Popup menu</string>
    <string name="popup_menu_summary">This activity illustrates the use of popup menus. The popup menu is shown by clicking the button above. The text area below logs various events.</string>
    <string name="popup_menu_button">Show popup!</string>
    <string name="popup_default_elevation">Use default elevation on popup</string>
    <string name="popup_menu_highlight">Highlight</string>
    <string name="popup_menu_highlight_description">Highlight description</string>
    <string name="popup_menu_highlight_tooltip">Highlight tooltip</string>
    <string name="popup_menu_edit">Edit</string>
    <string name="popup_menu_edit_description">Edit description</string>
    <string name="popup_menu_edit_tooltip">Edit tooltip</string>
    <string name="popup_menu_delete">Delete</string>
    <string name="popup_menu_ignore">Ignore</string>
    <string name="popup_menu_share">Share</string>
    <string name="popup_menu_share_email">Via email</string>
    <string name="popup_menu_share_circles">To my circles</string>
    <string name="popup_menu_print">Print</string>

    <string name="list_view_activity">AppCompat/ListView styling</string>
    <string name="appcompat_vector_disabled">AnimatedVectorDrawableCompat does not work on devices running API v10 or below</string>
    <string name="appcompat_vector_title">AppCompat/Integrations/AnimatedVectorDrawable</string>
    <string name="appcompat_animated_selector_title">AppCompat/Integrations/AnimatedStateListDrawable</string>

...
